@@ -128,27 +128,17 @@ result[type="2"] indicator span-title:before {content:" "; margin:0;}
 result[type="3"] indicator span-title:before {content:" "; margin:0;}
 result[type="9"] indicator span-title:before {content:" "; margin:0;}
 
-result indicator period		{display:block; padding:10px 0;}
-result indicator period period-start:before	{content:"Start "; font-size:14px; color:#000; display:inline-block; padding-right:10px;}
-result indicator period period-end:before	{content:"End "; font-size:14px; color:#000; display:inline-block; padding-right:10px;}
-result indicator period target:before	{content:"Target "; font-size:14px; color:#000; display:inline-block; padding-right:10px;}
-result indicator period actual:before	{content:"Actual "; font-size:14px; color:#000; display:inline-block; padding-right:10px;}
+result indicator description	{font-size:0.9em; color:#000; padding-top:10px;}
+
+result indicator period		{display:block; padding-top:10px;}
+result indicator period period-start:before	{content:"Start "; font-size:14px; color:#000; display:block; padding-right:10px;}
+result indicator period period-end:before	{content:"End "; font-size:14px; color:#000; display:block; padding-right:10px;}
+result indicator period target:before	{content:"Target "; font-size:14px; color:#000; display:block; padding-right:10px;}
+result indicator period actual:before	{content:"Actual "; font-size:14px; color:#000; display:block; padding-right:10px;}
 
 result indicator period period-start, result indicator period period-end,
-result indicator period target, result indicator period actual	{display:inline-block; vertical-align:top; width:220px; max-width:220px;}
+result indicator period target, result indicator period actual	{display:inline-block; vertical-align:top; width:220px; max-width:220px; line-height:1.35em;}
 
-/*
-result indicator			{display:block; padding:20px 40px; border-top:1px solid #000;}
-result indicator span-title	{display:inline-block; vertical-align:top; font-size:16px; padding:0; width:218px; line-height:1.25em;}
-result indicator span-title:before	{content:""; padding:0; margin:0;}
-result indicator description{display:inline-block; vertical-align:top; padding:0; margin:0; white-space:initial; line-height:initial; width:218px;}
-result indicator description:before	{content:""; padding:0; margin:0;}
-result indicator period				{display:inline-block; vertical-align:top; width:218px;}
-result indicator period	period-start{width:initial; max-width:initial; padding:0; line-height:initial;}
-result indicator period	period-start:before	{content:"From "; color:#000;}
-result indicator period	period-end	{width:initial; max-width:initial; padding:0; line-height:initial;}
-result indicator period	period-end:before	{content:"to "; color:#000;}
-*/
 
 
 /*	Sectors (also turned into graph: sector_pie)
