@@ -1,6 +1,8 @@
 Development Portal (2015-11-10 shi)
 ==============================
 SAVi results CSS to include new attributes
+Include result types, description, target, actual, periods
+Update Print Friendly CSS
 
 
 Development Portal (2015-11-05 shi)
